kubernetes/kube-prod-d1/pterodactyl-panel/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pterodactyl-panel-ingress
  namespace: pterodactyl-panel
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer

spec:
  rules:
    - host: pterodactyl.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pterodactyl-panel-service
                port:
                  number: 80
  tls:
    - hosts:
        - pterodactyl.kube-prod-d1.mclacken.net
      secretName: pterodactyl-panel-certificate-secret
